...
                            }
                        ) {
                            Text("Practice")
                        }
                        TextButton(
                            onClick = model.references::browse,
                            modifier = Modifier.testTag("open-reference"),
                        ) {
                            Text("Reference")
                        }
                        InputSettingsButton(openSettings)
                        UpdateButton(showUpdates, model.pendingSaves)
                    }
...
                LazyColumn(
                    state = state,
                    userScrollEnabled = !model.input.twoFinger,
                    modifier =
                        Modifier.weight(1f)
                            .fillMaxWidth()
                            .testTag("reader")
                            .then(
                                if (model.input.twoFinger) Modifier.twoFingerScroll(state)
                                else Modifier
                            ),
                    contentPadding = PaddingValues(bottom = 60.dp),
                    horizontalAlignment = Alignment.CenterHorizontally,
...
